# jscircuit

./: README.md  package.json  pyproject.toml
.github/workflows/: deploy.yml  test.yml
docs/pages/: index.md  jupyterlite-demo.md
python/jscircuit_anywidget/: __init__.py  widget.py
python/jscircuit_anywidget/static/: widget.js
src/gui/: anywidget-frontend.js  appShell.js  createJSCircuitApp.js  gui.html  main.js
src/gui/adapters/: GUIAdapter.js
src/gui/menu/: MenuBar.js  initMenu.js
src/gui/renderers/: CircuitRenderer.js
src/infrastructure/adapters/: QucatNetlistAdapter.js
tests/infrastructure/: testQucatNetlistAdapter.test.js
